--- a/productos.css
+++ b/productos.css
@@ -1,8 +1,19 @@
 *{
-    margin: 0px;
-    padding: 0px;
+    margin: 0;
+    padding: 0;
     box-sizing: border-box;
 }
+
+.seccionTitulo{
+    display: flex;
+    height: 200px;
+    width: 1380px;
+    align-content: center;
+    justify-content: center;
+    background-color: aqua;
+
+}
+
 .menuinicial{ 
     display: flex;
     background-color:sienna;
@@ -63,18 +74,12 @@
     color: sienna;
 }
 
-.portada{
-    display: flex;
-    justify-content: space-around;
-    /*text-align: center;*/
-}
 
-.titulo{
-    /*display: flex;*/
-    height: fit-content;
-    width: fit-content;
-    position: relative;
-    top:500px;
-    z-index: 2;
-    right: 800px;
+.tituloProductos{
+    display: flex;
+    align-content: center;
+    justify-content: center;
+    font-size: 70px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    color: blue;
 }
